--- a/student_predictor/predictor/templates/predictor/base.html
+++ b/student_predictor/predictor/templates/predictor/base.html
@@ -182,6 +182,8 @@
   <li><a href="{% url 'logout' %}">🚪 Logout</a></li>
    <li><a href="{% url 'chatbot' %}">🤖 Chatbot</a></li>
   <li><a href="{% url 'chat_history' %}">🕘 Chat History</a></li>
+  <<li><a href="{% url 'test_page' %}">📄 Tests</a></li>
+
 
 
 
