--- a/student_predictor/predictor/templates/predictor/base.html
+++ b/student_predictor/predictor/templates/predictor/base.html
@@ -177,13 +177,10 @@
     <ul>
   <li><a href="{% url 'profile_view' %}">👤 My Profile</a></li>
   <li><a href="{% url 'predict_manual' %}">🏠 Home</a></li>
-  <li><a href="{% url 'predict_manual' %}">Manual Entry</a></li>
   <li><a href="{% url 'predict_csv' %}">CSV Upload</a></li>
-  <li><a href="{% url 'logout' %}">🚪 Logout</a></li>
    <li><a href="{% url 'chatbot' %}">🤖 Chatbot</a></li>
-  <li><a href="{% url 'chat_history' %}">🕘 Chat History</a></li>
-  <<li><a href="{% url 'test_page' %}">📄 Tests</a></li>
-
+  <li><a href="{% url 'test_page' %}">📄 Tests</a></li>
+  <li><a href="{% url 'logout' %}">🚪 Logout</a></li>
 
 
 
